--- a/admin/package.json
+++ b/admin/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev  -p 5000",
+    "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start -p 8003"
+    "start": "next start -p 8002"
   },
   "dependencies": {
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.7.1",
+    "@emotion/cache": "^11.6.0",
+    "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
@@ -15,6 +15,7 @@
     "@mui/styles": "^5.2.1",
     "@next-auth/mongodb-adapter": "^0.0.2-next.298",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "cookies-next": "^2.0.3",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
@@ -27,12 +28,16 @@
     "multer": "^1.4.3",
     "next": "12.0.3",
     "next-auth": "0.0.0-pr.3217.87a21677",
+    "next-compose-plugins": "^2.2.1",
     "next-connect": "^0.11.0",
     "next-i18next": "^9.2.0",
+    "next-images": "^1.8.4",
     "next-page-transitions": "^1.0.0-beta.2",
     "next-redux-wrapper": "^7.0.5",
+    "perfect-scrollbar": "^1.5.3",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-ionicons": "^3.0.0",
     "react-material-ui-form-validator": "^3.0.0",
@@ -40,7 +45,9 @@
     "react-s-alert": "^1.4.1",
     "react-scrollspy": "^3.4.3",
     "react-top-loading-bar": "^2.1.0",
-    "socket.io-client": "^4.4.0"
+    "sass": "^1.45.0",
+    "socket.io-client": "^4.4.0",
+    "video-react": "^0.14.1"
   },
   "license": "MIT"
 }
