--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
