--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "@mui/styles": "^5.2.1",
     "animate.css": "^4.1.1",
     "axios": "^0.24.0",
+    "classnames": "2.2.6",
     "cookies": "^0.8.0",
     "cookies-next": "^2.0.3",
     "cors": "^2.8.5",
@@ -39,15 +40,18 @@
     "next-session": "^4.0.4",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "perfect-scrollbar": "^1.5.5",
     "react": "^17.0.2",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
     "react-ionicons": "^3.0.0",
+    "react-jss": "^10.9.0",
     "react-loading-overlay": "^1.0.1",
     "react-loadingg": "^1.7.2",
     "react-material-ui-form-validator": "^3.0.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "5.2.0",
     "react-s-alert": "^1.4.1",
     "react-scroll": "^1.8.4",
     "react-scroll-parallax": "^2.4.2",
